--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </p>
 
         <div class="news__comment_add">
-            <textarea name="" id="" rows="5" placeholder="Ваш комментарий"></textarea>
-            <button>
+            <textarea name="" id="comment" rows="5" placeholder="Ваш комментарий"></textarea>
+            <button id="addComment">
                 Добавить
             </button>
         </div>
-
+        <!-- тут типо будет блок -->
     </div>
 
     <script src="main.js"></script>
