--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
         <p class="news__brief">
             Коту Пуське сегодня вставать в 6 часов утра &#128561;! Скорее оставьте ему слова поддержки &#129392;.
         </p>
+        <h1>Не понимаю, как удалять и редактировать коменты..</h1>
 
         <div class="news__comment_add">
-            <textarea name="" id="comment" rows="5" placeholder="Ваш комментарий"></textarea>
+            <span class="">Имя</span>
+            <textarea name="" id="author" rows="1" placeholder="Ваше имя"></textarea>
+            <span>Комментарий</span>
+            <textarea name="" id="comment" rows="5" placeholder="Текст комментария"></textarea>
             <button id="addComment">
                 Добавить
             </button>
+            <div class="sortBox">
+                <span>Сортировка: </span>
+                <button onclick="ClearComment(); ShowComments()">По возрастанию</button>
+                <button onclick="SortByDescendingDate()">По убыванию</button>
+            </div>
         </div>
-        <!-- тут типо будет блок -->
     </div>
 
     <script src="main.js"></script>
